Afegits enunciats a anàlisi fins sèries de Fourier. Canvies en els comentaris (unificat %REF i %REFS)

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -56,7 +56,7 @@
 %	\begin{mdframed}[]\relax}{%
 %	\end{mdframed}}
 
-\hypersetup{
+\hypersetup{%
 	colorlinks=true,
 	linkcolor=[rgb]{0,0,0.5},
 	urlcolor=red,
@@ -64,7 +64,7 @@
 	pdfauthor={Claudi Lleyda Moltó},
 }
 
-\title{%\includegraphics[width=0.75\textwidth]{Portada.png}\\
+\title{%
 	\href{https://claudilleyda.github.io}{Apunts de matemàtiques}}
 \author{Claudi Lleyda Moltó}
 \date{Les matemàtiques són un joc de definicions.}
@@ -392,3 +392,5 @@
 % \Rightarrow \implica; \Leftarrow \implicatper; \Leftrightarrow \sii
 
 %\[\mathbb{A}\mathbb{B}\mathbb{C}\mathbb{D}\mathbb{E}\mathbb{F}\mathbb{G}\mathbb{H}\mathbb{I}\mathbb{J}\mathbb{K}\mathbb{L}\mathbb{M}\mathbb{N}\mathbb{O}\mathbb{P}\mathbb{Q}\mathbb{R}\mathbb{S}\mathbb{T}\mathbb{U}\mathbb{V}\mathbb{W}\mathbb{X}\mathbb{Y}\mathbb{Z}\]
+
+% http://www.math.uconn.edu/~kconrad/blurbs/
