--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -122,7 +122,7 @@
 			&=\inf_{f\in F}\int_{b}^{a}\norm{f'(t)}\diff t=\inf_{f\in F}\Long(f)=\Dist_{U}(Q,P)\geq0.
 			\end{align*}
 			
-			Continuem veient el punt \eqref{enum:distancies en arc-connexos 2}. Suposem \(P=Q\) i considerem, amb \(\varepsilon>0\), la bola oberta \(\B(\varepsilon,P)\subset U\). Aquesta bola és connexa i, pel \corollari \myref{obs:connex metrica}, \(\Dist_{U}(P,Q)=\norm{P-Q}=0\sii P=Q\).%refer salts de línia potser
+			Continuem veient el punt \eqref{enum:distancies en arc-connexos 2}. Suposem \(P=Q\) i considerem, amb \(\varepsilon>0\), la bola oberta \(\B(\varepsilon,P)\subset U\). Aquesta bola és connexa i, pel \corollari \myref{obs:connex metrica}, \(\Dist_{U}(P,Q)=\norm{P-Q}=0\sii P=Q\).%REFer salts de línia potser
 			
 			Acabem veient el punt \eqref{enum:distancies en arc-connexos 3}. Sigui \(F_{1}\) el conjunt de funcions contínues en \(U\) que van de \(P\) a \(R\) i \(F_{2}\) el conjunt de funcions contínues en \(U\) que van de \(R\) a \(Q\). Aleshores
 			\begin{displaymath}
@@ -369,7 +369,7 @@
 			\[\norm{dg(b)(\omicron(x-a))}\leq\norm{dg(b)}\omicron(\norm{x-a}).\] % fer: explicar
 			I com que quan \(x\to a,\ f(a)\to b\) (donat per \(\vec{h}\to0\)), ja que \(f\) és contínua. Aleshores podem escriure
 			\[f(x)-b=df(a)(x-a)+\omicron(x-a),\]
-			i  observant el cas \(x\to a\) trobem que \(\norm{f(x)-b}\leq C\norm{x-a}\), on \(C\in\mathbb{R}\) és la norma de l'aplicació lineal \(dg(b)\). % referència
+			i  observant el cas \(x\to a\) trobem que \(\norm{f(x)-b}\leq C\norm{x-a}\), on \(C\in\mathbb{R}\) és la norma de l'aplicació lineal \(dg(b)\). %REFerència
 		\end{proof}
 	\end{theorem}
 	\subsection{Gradient, punts crítics i extrems relatius}
