--- a/parts/MN.tex
+++ b/parts/MN.tex
@@ -159,7 +159,7 @@
 		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange. Aleshores per a tot \(\sigma\in S_{4}\) tenim
 		\[[x_{0},\dots,x_{n}]=[x_{\sigma{0}},\dots,x_{\sigma(n)}].\]
 		\begin{proof}
-			Per la proposició \myref{prop:unicitat interpolació de Lagrange}. %refinar potser
+			Per la proposició \myref{prop:unicitat interpolació de Lagrange}. %REFinar potser
 		\end{proof}
 	\end{observation}
 	\begin{proposition}\label{prop:algoritme diferències dividides de Newton}
@@ -247,7 +247,7 @@
 					Saber la puta verdad\\
 					Y quien le pone precio.}
 				\end{comment}
-			\[F^{(n+1)}(\xi^{(n+1)}_{n+1})=f^{(n+1)}(\xi^{(n+1)}_{n+1})-(n+1)!S(x)\]%referencies derivades polinomis
+			\[F^{(n+1)}(\xi^{(n+1)}_{n+1})=f^{(n+1)}(\xi^{(n+1)}_{n+1})-(n+1)!S(x)\]%REFerencies derivades polinomis
 			i per tant, recordant \eqref{eq:thm:primera fita de l'error en la interpolació de Lagrange 1}, tenim
 			\[\frac{f^{(n+1)}(\xi^{(n+1)}_{n+1})}{(n+1)!}=\frac{f(x)-P(x)}{\omega(x)}\]
 			d'on trobem
