Afegits enunciats a anàlisi matemàtic fins a sèries de Fourier i escrita la bibliografia per anàlisi matemàtic.

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -120,6 +120,7 @@
 \DeclareMathOperator{\clausura}{Cl}
 \DeclareMathOperator{\distancia}{d}
 \DeclareMathOperator{\esfera}{S}
+\DeclareMathOperator{\sfourier}{S}
 
 \let\ker\relax
 \DeclareMathOperator*{\ker}{ker}
@@ -136,6 +137,7 @@
 \newcommand{\lxor}{\veebar}
 \newcommand{\convergeixuniformement}{\rightrightarrows}
 \newcommand{\convolucio}{\ast}
+\newcommand{\conjugat}[1]{\overline{#1}}
 
 \newcommand{\sii}{\iff}
 \newcommand{\implica}{\implies}
