--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -144,6 +144,49 @@
 		\end{cases}
 		\end{displaymath}
 	\end{definition}
+	\subsection{Complexos}
+	\begin{definition}[Nombre complex]
+		\labelname{nombre complex}\label{def:nombre complex}
+		\labelname{unitat imaginària}\label{def:unitat imaginària}
+		Siguin \(a\) i \(b\) dos nombres reals, \(\iu\) una constant que satisfà \(\iu^{2}=-1\) i
+		\[z=a+b\iu.\]
+		Aleshores direm que \(z\) és un nombre complex i que \(\iu\) és la unitat imaginària.
+	\end{definition}
+	\begin{definition}[Norma d'un nombre complex]
+		\labelname{norma d'un nombre complex}\label{def:norma d'un nombre complex}
+		Sigui \(z=a+b\iu\) un nombre complex. Aleshores definim la seva norma com
+		\[\abs{z}=\sqrt{a^{2}+b^{2}}.\]
+	\end{definition}
+	\begin{definition}[Conjugat d'un nombre complex]
+		\labelname{conjugat d'un nombre complex}\label{def:nombre d'un nombre complex}
+		Sigui \(z+a+b\iu\) un nombre complex. Aleshores definim
+		\[\conjugat{z}=a-b\iu\]
+		com el conjugat de \(z\).
+	\end{definition}
+	\begin{proposition}
+		\label{prop:la nomra d'un nombre complex és l'arrel del nombre pel seu conjugat}
+		Sigui \(z\) un nombre complex. Aleshores es satisfà
+		\[\abs{z}=\sqrt{z\conjugat{z}}.\]
+		\begin{proof}
+			%TODO
+		\end{proof}
+	\end{proposition}
+	\begin{definition}[Part real i part imaginària d'un nombre complex]
+		\labelname{part real i part imaginària d'un nombre complex}\label{def:part real i part imaginària d'un nombre complex}
+		\labelname{part real d'un nombre complex}\label{def:part real d'un nombre complex}
+		\labelname{part imaginària d'un nombre complex}\label{def:part imaginària d'un nombre complex}
+		Sigui \(z=a+b\iu\) un nombre complex. Aleshores definim
+		\[\Re(z)=a\]
+		com la part real de \(z\) i
+		\[\Im(z)=b\]
+		com la part imaginària de \(z\).
+	\end{definition}
+	\begin{definition}[Integral d'una funció complexa]
+		\labelname{integral d'una funció complexa}\label{def:integral d'una funció complexa}
+		Sigui \(f\) una funció complexa i \(a\) i \(b\) dos reals. Aleshores definim
+		\[\int_{a}^{b}f(x)\diff x=\int_{a}^{b}\Re(f(x))\diff x+\iu\int_{a}^{b}\Im(f(x))\diff x\]
+		com la integral de \(f\).
+	\end{definition}
 %	\begin{theorem}[Teorema de la divisió Euclidiana]
 %		\labelname{Teorema de la divisió Euclidiana}\label{thm:divisió euclidiana}
 %	\end{theorem}
