--- a/referencies.bib
+++ b/referencies.bib
@@ -292,3 +292,68 @@
 	isbn = {9780201826531},
 	language = {Anglès},
 }
+
+@unpublished{ApuntsMorelo,
+	author = {Molero Casanova, Alejandro},
+	title = {Anàlisi Matemàtica},
+	date = {2018},
+}
+
+@online{HickmanRiemannSeriesTheoremNotes,
+	ALTauthor = {Hickman, Jonathan},
+	title = {Lectures 7 and 8: The Riemann series theorem},
+	date = {2018-12-18},
+	url = {https://math.uchicago.edu/~j.e.hickman/163%20Lecture%20notes/Lecture%207%20and%208.pdf},
+	OPTlanguage = {Anglès},
+}
+
+@online{KeithDifferentiatingUnderIntegralSignNotes,
+	ALTauthor = {Conrad, Keith},
+	title = {Differentiating under the integral sign},
+	date = {2018-12-18},
+	url = {http://www.math.uconn.edu/~kconrad/blurbs/analysis/diffunderint.pdf},
+	OPTlanguage = {Anglès},
+}
+
+@Book{GalindoGuiaPracticaCalculoInfinitesimal,
+	author = {Galindo Soto, Félix and Sanz Gil, Javier and Tristán Vega, Luis A.},
+	title = {Guía práctica de cálculo infinitesimal en varias variables},
+	publisher = {Ediciones Paraninfo},
+	year = {2005},
+	isbn = {978-8497323895},
+	language = {Castellà},
+}
+
+@Book{OrtegaIntroduccioAnalisiMatematica,
+	author = {Ortega Aramburu, Joaquín M.},
+	title = {Introducció a l'anàlisi matemàtica},
+	publisher = {Servei de Publicacions de la Universitat Autònoma de Barcelona},
+	year = {2002},
+	isbn = {84-490-2271-1},
+}
+
+@Book{PerelloCalculInfinitesimal,
+    author = {Perelló Valls, Carles},
+	title = {Càlcul infinitesimal: amb mètodes numèrics i aplicacions},
+	publisher = {Enciclopèdia Catalana, S.A.},
+	year = {1994},
+	isbn = {84-7739-518-7},
+}
+
+@Book{RudinPrinciplesOfMathematicalAnalysis,
+	author = {Rudin, Walter},
+	title = {Principles of Mathematical Analysis},
+	publisher = {McGraw-Hill Education},
+	year = {1976},
+	isbn = {978-0070542358},
+	language = {Anglès},
+}
+
+@Book{TolstovFourier,
+	author = {P. Tolstov, Georgi},
+	title = {Fourier Series},
+	publisher = {Dover Publications},
+	year = {1976},
+	isbn = {9780486633176},
+	language = {Anglès},
+}
