Afegits exemples i reordenació de la part d'anàlisi

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -149,6 +149,7 @@
 \newcommand{\diff}{\textrm{d}}
 \newcommand{\e}{\textrm{e}}
 \newcommand{\iu}{\textrm{i}}
+\newcommand{\uppi}{\pi} % REVISIT
 
 %\setcounter{chapter}{-1}
 
